--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="main-logo">
             <i class="fab fa-twitter"></i>
         </div>
+<!--          Logo div End Here-->
          </div>
           
       </div>
