--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <div class="main-options">
            
            <div><a href=""><i class="fas fa-home"></i>Home</a></div>
+           <div><a href=""><i class="fas fa-hashtag"></i>Explore</a></div>
+           <div><a href=""><i class="far fa-bell"></i>Notifications</a></div>
+           <div><a href=""><i class="far fa-envelope"></i>Messages</a></div>
+           <div><a href=""><i class="far fa-bookmark"></i>Bookmarks</a></div>
+           <div><a href=""><i class="fas fa-list-ul"></i>Lists</a></div>
+           <div><a href=""><i class="fas fa-home"></i>Profile</a></div>
+           <div><a href=""><i class="fas fa-home"></i>More</a></div>
             
         </div>
          </div>
