--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
            <div><a href=""><i class="far fa-envelope"></i>Messages</a></div>
            <div><a href=""><i class="far fa-bookmark"></i>Bookmarks</a></div>
            <div><a href=""><i class="fas fa-list-ul"></i>Lists</a></div>
-           <div><a href=""><i class="fas fa-home"></i>Profile</a></div>
-           <div><a href=""><i class="fas fa-home"></i>More</a></div>
+           <div><a href=""><i class="far fa-user"></i>Profile</a></div>
+           <div><a href=""><i class="fas fa-ellipsis-h"></i>More</a></div>
             
         </div>
          </div>
