--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                <img src="img/1606885844619.jpg" alt="">
                <strong id="profile-name">Omkar Borude</strong>
                <small>Frond-End Developer</small>
+               <small>MERN Stack</small>
            </div>
            
            <div class="profile-links">
