--- a/index.html
+++ b/index.html
@@ -126,10 +126,14 @@
                    </span>
                </a>
            </div>
-           <a href="">
-               <span>Access exclusive tools & insights</span>
-               <i class="fab fa-linkedin"></i>
-               <span>Try Premium Free for 1 Month</span>
+           <a href="" class="card-access-text">
+               <span> Access exclusive tools & insights</span> <br>
+               <i class="fab fa-linkedin" style="font-size: 18px; color:goldenrod"></i>
+               <span style="font-size: 13px;font-weight: 1000;color: black">Try Premium Free for 1 Month</span>
+           </a>
+           <a href="" style="padding: 15px;color: gray">
+               <i class="fas fa-bookmark"></i>
+               <span style="color: black;font-weight: bold; font-size: 14px;">My items</span>
            </a>
        
    </div>
