--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
              <div id="share-box">
                  <div class="share-top-div">
                      <img src="img/1606885844619.jpg" alt="" class="share-me">
-                     <input type="text" placeholder="Start a post">
+                     <input type="text" placeholder="Start a post" class="share-input">
                  </div>
                  <div class="share-bottom-div">
                      
