--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
                      <div class="tanay-info">
                          <strong style="font-size: 14px;">Tanay Pratap <span style="font-weight: 100;"> • 1st</span></strong>
                          <br>
-                         <a style="font-size: 13px;">Engineer @Microsoft | Doing ReactJS at MS'scale</a>
+                         <small style="font-size: 13px;">Engineer @Microsoft | Doing ReactJS at MS'scale</small>
                          <br>
-                         <a style="font-size: 13px; " >11mo • Edited • </a>
+                         <small style="font-size: 13px; display: flex;margin-top: -20px;" >11mo • Edited •  <i class="fas fa-globe-americas" style="margin-left: 5px;margin-top: 2px;"></i></small>
                      </div>
                      
                  </div>
